--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -11,21 +11,28 @@ repos:
         language: system
         pass_filenames: false
         always_run: true
-        stages: [commit]
+        stages: [pre-commit]
       - id: cargo-clippy
         name: cargo clippy
         entry: bash -c 'cargo clippy --all-targets --all-features -- -D warnings'
         language: system
         pass_filenames: false
         always_run: true
-        stages: [commit]
+        stages: [pre-commit]
       - id: cargo-test
         name: cargo test
         entry: bash -c 'cargo test --all-features'
         language: system
         pass_filenames: false
         always_run: true
-        stages: [push]
+        stages: [pre-push]
+      - id: validate-version
+        name: validate version in README.md
+        entry: bash -c './scripts/validate-version.sh'
+        language: system
+        pass_filenames: false
+        always_run: true
+        stages: [pre-commit]
 
   # General file checks
   - repo: https://github.com/pre-commit/pre-commit-hooks
