--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,29 @@
+# Rust
 target/
+**/*.rs.bk
+*.pdb
 
+# IDE
+.idea/
+.vscode/
+*.swp
+*.swo
+*~
+.DS_Store
+
+# OS
+Thumbs.db
+.DS_Store
+
+# Build artifacts
+*.exe
+*.dll
+*.so
+*.dylib
+
+# Debug
+*.dSYM/
+
+# Backup files
+*.bak
+*.tmp
