--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,11 @@ name = "file_tree"
 path = "examples/file_tree.rs"
 required-features = ["builder"]
 
+[[example]]
+name = "macro"
+path = "examples/macro.rs"
+required-features = ["macro"]
+
 [dependencies]
 colored = { version = "3.0", optional = true }
 
@@ -50,9 +55,10 @@ colored = { version = "3.0", optional = true }
 default = ["builder", "iterator"]
 builder = []
 iterator = []
+macro = []
 formatters = []
 color = ["colored"]
-all = ["builder", "iterator", "formatters", "color"]
+all = ["builder", "iterator", "macro", "formatters", "color"]
 
 [dev-dependencies]
 colored = "3.0"
