--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,20 +16,25 @@ readme = "README.md"
 name = "treelog"
 path = "src/lib.rs"
 
+[[bin]]
+name = "treelog"
+path = "src/cli.rs"
+required-features = ["cli"]
+
 [dependencies]
 colored = { version = "3.0", optional = true }
 serde = { version = "1.0", features = ["derive"], optional = true }
 serde_json = { version = "1.0", optional = true }
 serde_yaml = { version = "0.9", optional = true }
-toml = { version = "0.8", optional = true }
+toml = { version = "0.9", optional = true }
 walkdir = { version = "2", optional = true }
-petgraph = { version = "0.6", optional = true }
-cargo_metadata = { version = "0.18", optional = true }
-git2 = { version = "0.18", optional = true }
-roxmltree = { version = "0.19", optional = true }
+petgraph = { version = "0.8", optional = true }
+cargo_metadata = { version = "0.23", optional = true }
+git2 = { version = "0.20", optional = true }
+roxmltree = { version = "0.21", optional = true }
 syn = { version = "2.0", optional = true, features = ["full", "parsing", "extra-traits"] }
-ron = { version = "0.8", optional = true }
-tree-sitter = { version = "0.21", optional = true }
+ron = { version = "0.12", optional = true }
+tree-sitter = { version = "0.25", optional = true }
 clap = { version = "4.5", optional = true, features = ["derive"] }
 
 [features]
@@ -58,11 +63,12 @@ syn = ["dep:syn"]
 ron = ["serde", "dep:ron"]
 tree-sitter = ["dep:tree-sitter"]
 clap = ["dep:clap"]
+cli = ["clap"]
 all = ["builder", "iterator", "macro", "formatters", "traversal", "transform", "path", "comparison", "merge", "export", "color", "serde", "json", "yaml", "toml", "walkdir", "petgraph", "cargo-metadata", "git2", "roxmltree", "syn", "ron", "tree-sitter", "clap"]
 
 [dev-dependencies]
 colored = "3.0"
-tree-sitter-rust = "0.21"
+tree-sitter-rust = "0.24"
 
 [package.metadata.docs.rs]
 all-features = true
