--- a/.gitignore
+++ b/.gitignore
@@ -5,7 +5,14 @@ target/
 
 # IDE
 .idea/
-.vscode/
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+!.vscode/*.code-snippets
+!*.code-workspace
+*.vsix
 *.swp
 *.swo
 *~
