--- a/Cargo.toml
+++ b/Cargo.toml
@@ -82,6 +82,11 @@ all = ["builder", "iterator", "macro", "formatters", "traversal", "transform", "
 
 [dev-dependencies]
 colored = "3.0"
+console = "0.16.1"
+indicatif = "0.18.3"
+once_cell = "1.21.3"
+rand = "0.9.2"
+term_size = "0.3.2"
 tree-sitter-rust = "0.24"
 
 [package.metadata.docs.rs]
