split up cli into multiple modules to better organize

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ path = "src/lib.rs"
 
 [[bin]]
 name = "treelog"
-path = "src/cli.rs"
+path = "src/cli/mod.rs"
 required-features = ["cli"]
 
 [dependencies]
