--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "treelog"
-version = "0.0.6"
+version = "0.1.0-beta.0"
 edition = "2024"
 authors = ["Milan de Kruijf"]
 description = "A highly customizable, optimized, and modular tree rendering library"
