got rid of meta features and convenience feature flags

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,25 +52,17 @@ search = []
 sort = []
 stats = []
 merge = []
-export = ["export-html", "export-svg", "export-dot"]
 export-html = []
 export-svg = []
 export-dot = []
 color = ["colored"]
-serde = ["serde-json", "serde-yaml", "serde-toml", "serde-ron"]
+serde = ["dep:serde"]
 serde-json = ["dep:serde", "dep:serde_json"]
 serde-yaml = ["dep:serde", "dep:serde_yaml"]
 serde-toml = ["dep:serde", "dep:toml"]
 serde-ron = ["dep:serde", "dep:ron"]
-walkdir = ["arbitrary-walkdir"]
-petgraph = ["arbitrary-petgraph"]
-cargo-metadata = ["arbitrary-cargo"]
-git2 = ["arbitrary-git2"]
-syn = ["arbitrary-syn"]
-tree-sitter = ["arbitrary-tree-sitter"]
 clap = ["dep:clap"]
 cli = ["clap"]
-arbitrary = ["arbitrary-json", "arbitrary-yaml", "arbitrary-toml", "arbitrary-xml", "arbitrary-walkdir", "arbitrary-petgraph", "arbitrary-cargo", "arbitrary-git2", "arbitrary-syn", "arbitrary-tree-sitter", "arbitrary-clap"]
 arbitrary-json = ["serde-json"]
 arbitrary-yaml = ["serde-yaml"]
 arbitrary-toml = ["serde-toml"]
@@ -83,7 +75,6 @@ arbitrary-syn = ["dep:syn"]
 arbitrary-tree-sitter = ["dep:tree-sitter"]
 arbitrary-clap = ["dep:clap"]
 incremental = []
-all = ["builder", "iterator", "macro", "formatters", "traversal", "transform", "path", "compare", "search", "sort", "stats", "merge", "export", "export-html", "export-svg", "export-dot", "color", "serde", "serde-json", "serde-yaml", "serde-toml", "serde-ron", "walkdir", "petgraph", "cargo-metadata", "git2", "syn", "tree-sitter", "clap", "arbitrary", "arbitrary-json", "arbitrary-yaml", "arbitrary-toml", "arbitrary-xml", "arbitrary-walkdir", "arbitrary-petgraph", "arbitrary-cargo", "arbitrary-git2", "arbitrary-syn", "arbitrary-tree-sitter", "arbitrary-clap", "incremental"]
 
 [dev-dependencies]
 colored = "3.0"
